src/main/java/application/testData/invalidRandomAddresses/easy/todo/RandomAddressesWithAlternateNames.java
package application.testData.invalidRandomAddresses.easy.todo;

public class RandomAddressesWithAlternateNames {
    // se extrage random fieldul si se cauta in data storage numele alternative corespunzatoare pt acesta si se inlocuieste
}
